--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,42 @@
-@import './utils/variables';
-@import './utils/normalize';
+@charset "UTF-8";
+:root {
+  --font-family-primary: "Roboto", sans-serif;
+  --font-family-secondary: "Raleway", sans-serif;
+  --color-primary: #212121;
+  --color-secondary: #757575;
+  --color-third: #000000;
+  --color-accent: #2196F3;
+  --color-other: #ffffff;
+  --color-alfa: #ffffff85;
+  --color-border: #eeeeee;
+  --color-always-clients: #afb1b8;
+  --color-fill-footer: rgba(255, 255, 255, 0.1);
+  --color-background-primary: #e5e5e5;
+  --color-background-secondary: #2f303a;
+  --color-background-third: #f5f4fa;
+  --color-background-accent: #2196f3;
+  --color-background-other: #ffffff;
+  --color-background-ground: #ececec;
+  --color-background-fon-opacity: rgba(47, 48, 58, 0.8);
+  --default-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Normalize */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+/* Загальне забирання марджинів */
+h1, h2, h3, h4, h5, h6, p, ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* Відключення стилю лішок */
+li {
+  list-style-type: none;
+}
+
 /*
 @import './base/visually-hidden';
 @import './base/base-style';
@@ -29,4 +66,4 @@
 @import './components/form.scss/modal';
 @import './components/form.scss/form-field';
 @import './components/form.scss/modal';
-@import './components/form.scss/allow-group';*/
+@import './components/form.scss/allow-group';*//*# sourceMappingURL=main.css.map */
